@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2007, 2022, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2007, 2024, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -23,10 +23,10 @@
 
 /*
  * @test
- * @bug 6377794
+ * @bug 6377794 8174269
  * @modules jdk.localedata
  * @summary Test case for tzdata2005r support for 9 locales
- * @run main/othervm -Djava.locale.providers=JRE,SPI Bug6377794
+ * @run main Bug6377794
  */
 
 import java.util.Locale;
@@ -47,15 +47,32 @@ public class Bug6377794 {
     };
 
     public static void main(String[] args) {
+        // As of CLDR 44, "SystemV/YST9" is replaced by "Pacific/Gambier" in supplementalMetadata.xml
         TimeZone SystemVYST9 = TimeZone.getTimeZone("SystemV/YST9");
         Locale tzLocale;
         for (int i = 0; i < locales2Test.length; i++) {
             tzLocale = locales2Test[i];
-            if (!SystemVYST9.getDisplayName(false, TimeZone.SHORT, tzLocale).equals
-               ("AKST"))
-                throw new RuntimeException("\n" + tzLocale + ": SHORT, " +
-                                           "non-daylight saving name for " +
-                                           "SystemV/YST9 should be \"AKST\"");
+            if (i == 3) {
+                // French
+                if (!SystemVYST9.getDisplayName(false, TimeZone.SHORT, tzLocale).equals
+                        ("UTC\u221209:00"))
+                    throw new RuntimeException("\n" + tzLocale + ": SHORT, " +
+                            "non-daylight saving name for " +
+                            "SystemV/YST9 should be \"UTC\u221209:00\"");
+            } else if (i == 7) {
+                // Swedish
+                if (!SystemVYST9.getDisplayName(false, TimeZone.SHORT, tzLocale).equals
+                        ("GMT\u221209:00"))
+                    throw new RuntimeException("\n" + tzLocale + ": SHORT, " +
+                            "non-daylight saving name for " +
+                            "SystemV/YST9 should be \"GMT\u221209:00\"");
+            } else {
+                if (!SystemVYST9.getDisplayName(false, TimeZone.SHORT, tzLocale).equals
+                        ("GMT-09:00"))
+                    throw new RuntimeException("\n" + tzLocale + ": SHORT, " +
+                            "non-daylight saving name for " +
+                            "SystemV/YST9 should be \"GMT-09:00\"");
+            }
         }
 
 /*
@@ -64,76 +81,78 @@ public class Bug6377794 {
  * TimeZone.LONG instead.
  */
 
+            // As of CLDR 44, "SystemV/PST8" is replaced by "Pacific/Pitcairn"
+            // in supplementalMetadata.xml
             TimeZone SystemVPST8 = TimeZone.getTimeZone("SystemV/PST8");
             tzLocale = locales2Test[0];
             if (!SystemVPST8.getDisplayName(false, TimeZone.LONG, tzLocale).equals
-               ("Pacific Standard Time"))
+               ("Pitcairn Time"))
                 throw new RuntimeException("\n" + tzLocale + ": LONG, " +
                                            "non-daylight saving name for " +
                                            "SystemV/PST8 should be " +
-                                           "\"Pacific Standard Time\"");
+                                           "\"Pitcairn Time\"");
             tzLocale = locales2Test[1];
             if (!SystemVPST8.getDisplayName(false, TimeZone.LONG, tzLocale).equals
-               ("Pazifische Normalzeit"))
+               ("Pitcairninseln-Zeit"))
                 throw new RuntimeException("\n" + tzLocale + ": LONG, " +
                                            "non-daylight saving name for " +
                                            "SystemV/PST8 should be " +
-                                           "\"Pazifische Normalzeit\"");
+                                           "\"Pitcairninseln-Zeit\"");
             tzLocale = locales2Test[2];
             if (!SystemVPST8.getDisplayName(false, TimeZone.LONG, tzLocale).equals
-               ("Hora est\u00e1ndar del Pac\u00edfico"))
+               ("hora de Pitcairn"))
                 throw new RuntimeException("\n" + tzLocale + ": LONG, " +
                                            "non-daylight saving name for " +
                                            "SystemV/PST8 should be " +
-                                           "\"Hora est\u00e1ndar del Pac\u00edfico\"");
+                                           "\"hora de Pitcairn\"");
             tzLocale = locales2Test[3];
             if (!SystemVPST8.getDisplayName(false, TimeZone.LONG, tzLocale).equals
-               ("Heure normale du Pacifique"))
+               ("heure des \u00eeles Pitcairn"))
                 throw new RuntimeException("\n" + tzLocale + ": LONG, " +
                                            "non-daylight saving name for " +
                                            "SystemV/PST8 should be " +
-                                           "\"Heure normale du Pacifique\"");
+                                           "\"heure des \u00eeles Pitcairn\"");
             tzLocale = locales2Test[4];
             if (!SystemVPST8.getDisplayName(false, TimeZone.LONG, tzLocale).equals
-               ("Ora solare della costa occidentale USA"))
+               ("Ora delle Pitcairn"))
                 throw new RuntimeException("\n" + tzLocale + ": LONG, " +
                                            "non-daylight saving name for " +
                                            "SystemV/PST8 should be " +
-                                           "\"Ora solare della costa occidentale USA\"");
+                                           "\"Ora delle Pitcairn\"");
             tzLocale = locales2Test[5];
             if (!SystemVPST8.getDisplayName(false, TimeZone.LONG, tzLocale).equals
-               ("\u592a\u5e73\u6d0b\u6a19\u6e96\u6642"))
+               ("\u30d4\u30c8\u30b1\u30a2\u30f3\u6642\u9593"))
                 throw new RuntimeException("\n" + tzLocale + ": LONG, " +
                                            "non-daylight saving name for " +
                                            "SystemV/PST8 should be " +
-                                           "\"\u592a\u5e73\u6d0b\u6a19\u6e96\u6642\"");
+                                           "\"\u30d4\u30c8\u30b1\u30a2\u30f3\u6642\u9593\"");
             tzLocale = locales2Test[6];
             if (!SystemVPST8.getDisplayName(false, TimeZone.LONG, tzLocale).equals
-               ("\ud0dc\ud3c9\uc591 \ud45c\uc900\uc2dc"))
+               ("\ud54f\ucf00\uc5b8 \uc2dc\uac04"))
                 throw new RuntimeException("\n" + tzLocale + ": LONG, " +
                                            "non-daylight saving name for " +
                                            "SystemV/PST8 should be " +
-                                           "\"\ud0dc\ud3c9\uc591 \ud45c\uc900\uc2dc\"");
+                                           "\"\ud54f\ucf00\uc5b8 \uc2dc\uac04\"");
             tzLocale = locales2Test[7];
             if (!SystemVPST8.getDisplayName(false, TimeZone.LONG, tzLocale).equals
-               ("Stilla havet, normaltid"))
+               ("Pitcairntid"))
                 throw new RuntimeException("\n" + tzLocale + ": LONG, " +
                                            "non-daylight saving name for " +
                                            "SystemV/PST8 should be " +
-                                           "\"Stilla havet, normaltid\"");
+                                           "\"Pitcairntid\"");
             tzLocale = locales2Test[8];
             if (!SystemVPST8.getDisplayName(false, TimeZone.LONG, tzLocale).equals
-               ("\u592a\u5e73\u6d0b\u6807\u51c6\u65f6\u95f4"))
+               ("\u76ae\u7279\u51ef\u6069\u65f6\u95f4"))
                 throw new RuntimeException("\n" + tzLocale + ": LONG, " +
                                            "non-daylight saving name for " +
                                            "SystemV/PST8 should be " +
-                                           "\"\u592a\u5e73\u6d0b\u6807\u51c6\u65f6\u95f4\"");
+                                           "\"\u76ae\u7279\u51ef\u6069\u65f6\u95f4\"");
             tzLocale = locales2Test[9];
             if (!SystemVPST8.getDisplayName(false, TimeZone.LONG, tzLocale).equals
-               ("\u592a\u5e73\u6d0b\u6a19\u6e96\u6642\u9593"))
+               ("\u76ae\u7279\u80af\u6642\u9593"))
                 throw new RuntimeException("\n" + tzLocale + ": LONG, " +
                                            "non-daylight saving name for " +
                                            "SystemV/PST8 should be " +
-                                           "\"\u592a\u5e73\u6d0b\u6a19\u6e96\u6642\u9593\"");
+                                           "\"\u76ae\u7279\u80af\u6642\u9593\"");
    }
 }
