@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2015, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2015, 2024, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -23,8 +23,9 @@
 
 /**
  * @test
- * @bug 8072480 8277106
+ * @bug 8072480 8277106 8331027
  * @summary Unit test for CreateSymbols
+ * @enablePreview
  * @modules java.compiler
  *          jdk.compiler/com.sun.tools.javac.api
  *          jdk.compiler/com.sun.tools.javac.jvm
@@ -101,6 +102,9 @@ public class CreateSymbolsTest {
                                       null,
                                       List.of("-d",
                                               compileDir.toAbsolutePath().toString(),
+                                              "--enable-preview",
+                                              "--source",
+                                              "" + System.getProperty("java.specification.version"),
                                               "-g",
                                               "--add-modules", "jdk.jdeps",
                                               "--add-exports", "jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED",
